# slava_moduile

./: .gitignore  CMakeLists.txt  DOCUMENTATION.md  IMPLEMENTATION_SUMMARY.md  README.md
examples/: example_basic.cpp  example_educational.cpp  example_gauss.cpp  example_inverse.cpp
include/matrix_gf2/: gf_element.hpp  matrix.hpp
src/: gf_element.cpp  matrix.cpp
tests/: test_matrix_gf2.cpp
